fixing alignment

--- a/src/app/components/servers/servers.component.css
+++ b/src/app/components/servers/servers.component.css
@@ -29,7 +29,7 @@ div {
 
 .customBox
 {
-    height: 25vw; 
+    height: 27vw; 
     width: 30vw; 
     /* position: relative; */
     /* left: 5%;
