--- a/src/app/feature-modules/utilities/components/multi-checkbox/multi-checkbox.component.css
+++ b/src/app/feature-modules/utilities/components/multi-checkbox/multi-checkbox.component.css
@@ -1,14 +1,37 @@
 .checkboxContainer {
     margin: 1.5vw; 
     margin-left: 1vw;
+    width: 90%;
+    display: flex;
+    /* margin-right: 0px; */
+    /* width: 8vw; */
 }
 
 .titleLabel {
     color: red; 
     background-color: lightgoldenrodyellow; 
     padding: 3px;
+    /* top: 50%; */
+    /* vertical-align: middle; */
+    /* margin-top: 50%; */
 }
 
 .spanSpace {
     margin: 1.8vw;
+}
+
+.titleDiv {
+    width: 5vw;
+    /* height: 100%; */
+    float: left;
+    padding-top: 1.9vw;
+    /* box-sizing: border-box; */
+    /* display: table; */
+}
+
+.optionsDiv {
+    width: 16vw;
+    /* height: 100%; */
+    margin-left: 2vw; 
+    /* float: right; */
 }
